--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,21 +1,18 @@
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://wallpaperaccess.com/full/3092603.png" class="d-block w-100" alt="...">
+<div class="mt-4">
+  <div class="row">
+
+    {{#each courses}}
+    <div class="col-sm-6 col-lg-4">
+      <div class="card car-course-item">
+        <img class="card-img-top" src="{{this.image}}" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">{{this.name}}</h5>
+          <p class="card-text">{{this.desctiption}}</p>
+          <a href="#" class="btn btn-primary">Mua khoá học</a>
+        </div>
+      </div>
     </div>
-    <div class="carousel-item">
-      <img src="https://wallpaperaccess.com/full/3092603.png" class="d-block w-100">
-    </div>
-    <div class="carousel-item">
-      <img src="https://wallpaperaccess.com/full/3092603.png" class="d-block w-100" alt="...">
-    </div>
+  {{/each}}
+
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
