--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -4,15 +4,19 @@
     {{#each courses}}
     <div class="col-sm-6 col-lg-4">
       <div class="card car-course-item">
-        <img class="card-img-top" src="{{this.image}}" alt="Card image cap">
+        <a href="/courses/{{this.slug}}">
+          <img class="card-img-top" src="{{this.image}}" alt="Card image cap">
+        </a>
         <div class="card-body">
-          <h5 class="card-title">{{this.name}}</h5>
+          <a href="/courses/{{this.slug}}">
+            <h5 class="card-title">{{this.name}}</h5>
+          </a>
           <p class="card-text">{{this.desctiption}}</p>
           <a href="#" class="btn btn-primary">Mua khoá học</a>
         </div>
       </div>
     </div>
-  {{/each}}
+    {{/each}}
 
   </div>
 </div>
